Fix baseline alignment on blog post for header metadata

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -13,7 +13,7 @@
 
 .article-meta {
   display: flex;
-  align-items: center;
+  align-items: first baseline;
   opacity: 80%;
 }
 
